syntax = "proto3";

// option java_multiple_files = true;
option java_package = "hengda.billboard";
option java_outer_classname = "CampusProto";

package campus;

service Campus {

  rpc get(GetRequest) returns (Reply) {}

  rpc search(SearchRequest) returns (Reply) {}

}

message GetRequest { 
  uint32 id = 1; 
  string uuid = 2;
}

message SearchRequest {
  string city = 1;
  bool category1 = 2;
  bool category2 = 3;
  string keyword = 4;
}

message Reply { string data = 1; }
